--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (5.0.44) UNRELEASED; urgency=low
+debhelper (5.0.44) unstable; urgency=low
 
   * dh_installudev: Don't fail if the link already somehow exists on initial
     package install. Closes: #415717
@@ -16,7 +16,7 @@ debhelper (5.0.44) UNRELEASED; urgency=low
     the same as all the other code in debhelper. This could only be fixed in
     v6 mode because packages may potentially legitimately rely on the old
     buggy behavior. Closes: #242834
-  * dh_installman: In v6 mode, overwrite exsiting man pages. Closes: #288250
+  * dh_installman: In v6 mode, overwrite existing man pages. Closes: #288250
   * Add dh_installifupdown. Please consider using this if you have
     /etc/network/if-up.d, etc files. Closes: #217552
 
