r1987: * Do script fragement reversal only in v6, since it can break certian   third party programs such as dh_installtex. Closes: #419060

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -362,6 +362,11 @@ compared to V5:
 
 =item -
 
+Commands that generate maintainer script fragements will order the
+fragements in reverse order for the prerm and postrm scripts.
+
+=item -
+
 dh_installwm will install a slave manpage link for x-window-manager.1.gz.
 
 =item -
