--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,8 @@ debhelper (5.0.45) UNRELEASED; urgency=low
     the rules file to the new location on upgrade.
   * This would be a good time for the many packages that manage rules files
     w/o using dh_installudev to begin to use it..
+  * Do script fragement reversal only in v6, since it can break certian
+    third party programs such as dh_installtex. Closes: #419060
 
  -- Joey Hess <joeyh@debian.org>  Thu, 12 Apr 2007 15:35:20 -0400
 
