--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (5.0.45) UNRELEASED; urgency=low
+debhelper (5.0.45) unstable; urgency=low
 
   * dh_installudev: Install udev rules directly into /etc/udev/rules.d/, not
     using the symlinks. MD has agreed that this is more appropriate for most
@@ -6,7 +6,7 @@ debhelper (5.0.45) UNRELEASED; urgency=low
   * That fixes the longstanding bug that the symlink was only made on brand
     new installs of the package, rather than on upgrade to the first version
     that includes the udev rules file. Closes: #359614
-  * This avoids the need to run udevcontrol reload_rules, since inotify 
+  * This avoids the need to run udevcontrol reload_rules, since inotify
     will see the file has changed. Closes: #414537
   * dh_installudev: Add preinst and postinst code to handle cleanly moving
     the rules file to the new location on upgrade.
@@ -15,7 +15,7 @@ debhelper (5.0.45) UNRELEASED; urgency=low
   * Do script fragement reversal only in v6, since it can break certian
     third party programs such as dh_installtex. Closes: #419060
 
- -- Joey Hess <joeyh@debian.org>  Thu, 12 Apr 2007 15:35:20 -0400
+ -- Joey Hess <joeyh@debian.org>  Fri, 13 Apr 2007 12:34:10 -0400
 
 debhelper (5.0.44) unstable; urgency=low
 
