--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (5.0.46) unstable; urgency=low
+
+  * Fix a typo in postinst-udev.
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 16 Apr 2007 12:39:41 -0400
+
 debhelper (5.0.45) unstable; urgency=low
 
   * dh_installudev: Install udev rules directly into /etc/udev/rules.d/, not
