r1992: * Fix absurd typo. How did I test for an hour and miss that? Closes: #419612

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (5.0.47) unstable; urgency=low
+
+  * Fix absurd typo. How did I test for an hour and miss that? Closes: #419612
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 16 Apr 2007 18:19:12 -0400
+
 debhelper (5.0.46) unstable; urgency=low
 
   * Fix a typo in postinst-udev.
