--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (5.0.48) unstable; urgency=low
+
+  * Remove use of #SECTION# from dh_installinfo postinst snippet
+    that was accidentially re-added in 5.0.46 due to a corrupt svn checkout.
+    Closes: #419849
+
+ -- Joey Hess <joeyh@debian.org>  Wed, 18 Apr 2007 13:24:58 -0400
+
 debhelper (5.0.47) unstable; urgency=low
 
   * Fix absurd typo. How did I test for an hour and miss that? Closes: #419612
