r1997: * dh_installwm: Fix several stupid bugs, including:   - man page handling was supposed to be v6 only and was not   - typo in alternatives call   - use the basename of the wm to get the man page name   Closes: #420158 * dh_installwm: Also make the code to find the man page more robust and   fall back to not registering a man page if it is not found.

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -367,7 +367,9 @@ fragements in reverse order for the prerm and postrm scripts.
 
 =item -
 
-dh_installwm will install a slave manpage link for x-window-manager.1.gz.
+dh_installwm will install a slave manpage link for x-window-manager.1.gz,
+if it sees the man page in usr/share/man/man1 in the package build
+directory.
 
 =item -
 
