--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (5.0.49) UNRELEASED; urgency=low
+debhelper (5.0.49) unstable; urgency=low
 
   * dh_installwm: Fix several stupid bugs, including:
     - man page handling was supposed to be v6 only and was not
@@ -8,7 +8,7 @@ debhelper (5.0.49) UNRELEASED; urgency=low
   * dh_installwm: Also make the code to find the man page more robust and
     fall back to not registering a man page if it is not found.
 
- -- Joey Hess <joeyh@debian.org>  Fri, 20 Apr 2007 13:29:39 -0400
+ -- Joey Hess <joeyh@debian.org>  Fri, 20 Apr 2007 13:43:35 -0400
 
 debhelper (5.0.48) unstable; urgency=low
 
