--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (5.0.50) UNRELEASED; urgency=low
+
+  * dh_installwm: If a path is not given, assume the file is in usr/bin, since
+    usr/X11R6/bin now points to there.
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 06 May 2007 16:14:51 -0400
+
 debhelper (5.0.49) unstable; urgency=low
 
   * dh_installwm: Fix several stupid bugs, including:
