r2002: * Update urls to web page.

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -472,7 +472,7 @@ DH_ALWAYS_EXCLUDE=CVS:.svn
 
 A set of example debian/rules files that use debhelper.
 
-=item L<http://kitenet.net/programs/debhelper/>
+=item L<http://kitenet.net/~joey/code/debhelper/>
 
 Debhelper web site.
 
