--- a/man/po4a/po/debhelper.pot
+++ b/man/po4a/po/debhelper.pot
@@ -860,7 +860,7 @@ msgstr ""
 
 # type: =item
 #: debhelper.pod:475
-msgid "L<http://kitenet.net/programs/debhelper/>"
+msgid "L<http://kitenet.net/~joey/code/debhelper/>"
 msgstr ""
 
 # type: textblock
