--- a/man/po4a/po/fr.po
+++ b/man/po4a/po/fr.po
@@ -1176,8 +1176,8 @@ msgstr ""
 
 # type: =item
 #: debhelper.pod:475
-msgid "L<http://kitenet.net/programs/debhelper/>"
-msgstr "L<http://kitenet.net/programs/debhelper/>"
+msgid "L<http://kitenet.net/~joey/code/debhelper/>"
+msgstr "L<http://kitenet.net/~joey/code/debhelper/>"
 
 # type: textblock
 #: debhelper.pod:477
