--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,9 @@ debhelper (5.0.50) UNRELEASED; urgency=low
 
   * dh_installwm: If a path is not given, assume the file is in usr/bin, since
     usr/X11R6/bin now points to there.
+  * Update urls to web page.
 
- -- Joey Hess <joeyh@debian.org>  Sun, 06 May 2007 16:14:51 -0400
+ -- Joey Hess <joeyh@debian.org>  Thu, 17 May 2007 00:17:43 -0400
 
 debhelper (5.0.49) unstable; urgency=low
 
