--- a/man/po4a/po/es.po
+++ b/man/po4a/po/es.po
@@ -1152,8 +1152,8 @@ msgstr "Varios ficheros de ejemplo debian/rules que usan debhelper."
 
 # type: =item
 #: debhelper.pod:475
-msgid "L<http://kitenet.net/programs/debhelper/>"
-msgstr "L<http://kitenet.net/programs/debhelper/>"
+msgid "L<http://kitenet.net/~joey/code/debhelper/>"
+msgstr "L<http://kitenet.net/~joey/code/debhelper/>"
 
 # type: textblock
 #: debhelper.pod:477
