--- a/debian/changelog
+++ b/debian/changelog
@@ -1,12 +1,14 @@
-debhelper (5.0.50) UNRELEASED; urgency=low
+debhelper (5.0.50) unstable; urgency=low
 
   * dh_installwm: If a path is not given, assume the file is in usr/bin, since
     usr/X11R6/bin now points to there.
   * Update urls to web page.
   * Add some checks for attempts to act on packages not defined in the control
-    file.
+    file. (Thanks Wakko)
+  * Use dpkg-query to retrieve conffile info in udev rules upgrade code 
+    rather than parsing status directly. (Thanks Guillem)
 
- -- Joey Hess <joeyh@debian.org>  Sun, 27 May 2007 22:27:59 -0400
+ -- Joey Hess <joeyh@debian.org>  Thu, 31 May 2007 13:14:06 -0400
 
 debhelper (5.0.49) unstable; urgency=low
 
