--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (5.0.51) UNRELEASED; urgency=low
+
+  * Remove possibly confusing (though strictly accurate) sentence from
+    dh_installdirs.1. Closes: #429318
+
+ -- Joey Hess <joeyh@debian.org>  Tue, 26 Jun 2007 18:10:54 -0400
+
 debhelper (5.0.50) unstable; urgency=low
 
   * dh_installwm: If a path is not given, assume the file is in usr/bin, since
