--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,9 @@ debhelper (5.0.51) UNRELEASED; urgency=low
 
   * Remove possibly confusing (though strictly accurate) sentence from
     dh_installdirs.1. Closes: #429318
+  * dh_gencontrol: Fix man page typo. Closes: #431232
 
- -- Joey Hess <joeyh@debian.org>  Tue, 26 Jun 2007 18:10:54 -0400
+ -- Joey Hess <joeyh@debian.org>  Sat, 30 Jun 2007 17:19:00 -0400
 
 debhelper (5.0.50) unstable; urgency=low
 
