--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,17 @@
 debhelper (5.0.51) UNRELEASED; urgency=low
 
+  * dh_icons: New program to update Freedesktop icon caches. Thanks
+    to Josselin Mouette, Ross Burton, Jordi Mallach, and Loïc Minier.
+    Closes: #329460
+  * Note that as a transitional measure, dh_icons will currently only update
+    existing caches, and not create and new caches. Once everything is
+    updating the icon caches, this will be changed. See #329460 for the full
+    plan.
   * Remove possibly confusing (though strictly accurate) sentence from
     dh_installdirs.1. Closes: #429318
   * dh_gencontrol: Fix man page typo. Closes: #431232
 
- -- Joey Hess <joeyh@debian.org>  Sat, 30 Jun 2007 17:19:00 -0400
+ -- Joey Hess <joeyh@debian.org>  Sun, 08 Jul 2007 17:54:50 -0400
 
 debhelper (5.0.50) unstable; urgency=low
 
