--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (5.0.51) UNRELEASED; urgency=low
+debhelper (5.0.51) unstable; urgency=low
 
   * dh_icons: New program to update Freedesktop icon caches. Thanks
     to Josselin Mouette, Ross Burton, Jordi Mallach, and Loïc Minier.
@@ -11,7 +11,7 @@ debhelper (5.0.51) UNRELEASED; urgency=low
     dh_installdirs.1. Closes: #429318
   * dh_gencontrol: Fix man page typo. Closes: #431232
 
- -- Joey Hess <joeyh@debian.org>  Sun, 08 Jul 2007 17:54:50 -0400
+ -- Joey Hess <joeyh@debian.org>  Sun, 08 Jul 2007 18:16:21 -0400
 
 debhelper (5.0.50) unstable; urgency=low
 
