r2013: * Remove DOS line endings from dh_icons scriptlets. Thanks, Daniel Holbach.   Closes: #432321

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (5.0.52) UNRELEASED; urgency=low
+
+  * Remove DOS line endings from dh_icons scriptlets. Thanks, Daniel Holbach.
+    Closes: #432321
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 09 Jul 2007 11:24:59 -0400
+
 debhelper (5.0.51) unstable; urgency=low
 
   * dh_icons: New program to update Freedesktop icon caches. Thanks
