--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-debhelper (5.0.52) UNRELEASED; urgency=low
+debhelper (5.0.52) unstable; urgency=low
 
   * Remove DOS line endings from dh_icons scriptlets. Thanks, Daniel Holbach.
     Closes: #432321
 
- -- Joey Hess <joeyh@debian.org>  Mon, 09 Jul 2007 11:24:59 -0400
+ -- Joey Hess <joeyh@debian.org>  Mon, 09 Jul 2007 11:26:18 -0400
 
 debhelper (5.0.51) unstable; urgency=low
 
