--- a/debhelper.pod
+++ b/debhelper.pod
@@ -384,6 +384,8 @@ directory. In previous compatability levels it silently refuses to do this.
 
 =back
 
+=back
+
 =head2 Doc directory symlinks
 
 Sometimes it is useful to make a package not contain a /usr/share/doc/package
