r2017: * dh_icons: Check for index.theme files before updating the cache.   Closes: #432824

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (5.0.53) unstable; urgency=low
+
+  * dh_icons: Check for index.theme files before updating the cache.
+    Closes: #432824
+
+ -- Joey Hess <joeyh@debian.org>  Fri, 13 Jul 2007 14:51:00 -0400
+
 debhelper (5.0.52) unstable; urgency=low
 
   * Remove DOS line endings from dh_icons scriptlets. Thanks, Daniel Holbach.
