r2019: * dh_strip: Man page reference to policy section on DEB_BUILD_OPTIONS.   Closes: #437337

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (5.0.54) UNRELEASED; urgency=low
+
+  * dh_strip: Man page reference to policy section on DEB_BUILD_OPTIONS.
+    Closes: #437337
+
+ -- Joey Hess <joeyh@debian.org>  Sat, 11 Aug 2007 19:27:55 -0400
+
 debhelper (5.0.53) unstable; urgency=low
 
   * dh_icons: Check for index.theme files before updating the cache.
