r2020: * dh_link: Skip self-links. Closes: #438572

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,9 @@ debhelper (5.0.54) UNRELEASED; urgency=low
 
   * dh_strip: Man page reference to policy section on DEB_BUILD_OPTIONS.
     Closes: #437337
+  * dh_link: Skip self-links. Closes: #438572
 
- -- Joey Hess <joeyh@debian.org>  Sat, 11 Aug 2007 19:27:55 -0400
+ -- Joey Hess <joeyh@debian.org>  Fri, 17 Aug 2007 20:41:42 -0400
 
 debhelper (5.0.53) unstable; urgency=low
 
