r2021: * Don't use - in front of make clean in example rules files.

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,8 +3,9 @@ debhelper (5.0.54) UNRELEASED; urgency=low
   * dh_strip: Man page reference to policy section on DEB_BUILD_OPTIONS.
     Closes: #437337
   * dh_link: Skip self-links. Closes: #438572
+  * Don't use - in front of make clean in example rules files.
 
- -- Joey Hess <joeyh@debian.org>  Fri, 17 Aug 2007 20:41:42 -0400
+ -- Joey Hess <joeyh@debian.org>  Tue, 28 Aug 2007 16:49:44 -0400
 
 debhelper (5.0.53) unstable; urgency=low
 
