--- a/debian/changelog
+++ b/debian/changelog
@@ -4,8 +4,9 @@ debhelper (5.0.54) UNRELEASED; urgency=low
     Closes: #437337
   * dh_link: Skip self-links. Closes: #438572
   * Don't use - in front of make clean in example rules files.
+  * Typo. Closes: #441272
 
- -- Joey Hess <joeyh@debian.org>  Tue, 28 Aug 2007 16:49:44 -0400
+ -- Joey Hess <joeyh@debian.org>  Sat, 08 Sep 2007 14:45:01 -0400
 
 debhelper (5.0.53) unstable; urgency=low
 
