--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (5.0.54) UNRELEASED; urgency=low
+debhelper (5.0.54) unstable; urgency=low
 
   * dh_strip: Man page reference to policy section on DEB_BUILD_OPTIONS.
     Closes: #437337
@@ -6,7 +6,7 @@ debhelper (5.0.54) UNRELEASED; urgency=low
   * Don't use - in front of make clean in example rules files.
   * Typo. Closes: #441272
 
- -- Joey Hess <joeyh@debian.org>  Sat, 08 Sep 2007 14:45:01 -0400
+ -- Joey Hess <joeyh@debian.org>  Sat, 08 Sep 2007 21:52:40 -0400
 
 debhelper (5.0.53) unstable; urgency=low
 
