r2025: * dh_desktop: Only generate calls to update-desktop-database for desktop   files with MimeType fields. Patch from Emmet Hikory. Closes: #427831

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (5.0.55) UNRELEASED; urgency=low
+
+  * dh_desktop: Only generate calls to update-desktop-database for desktop
+    files with MimeType fields. Patch from Emmet Hikory. Closes: #427831
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 13 Sep 2007 15:11:06 -0400
+
 debhelper (5.0.54) unstable; urgency=low
 
   * dh_strip: Man page reference to policy section on DEB_BUILD_OPTIONS.
