r2026: * dh_strip: Don't run objcopy if the output file already exists.   Closes: #380314

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,10 @@ debhelper (5.0.55) UNRELEASED; urgency=low
 
   * dh_desktop: Only generate calls to update-desktop-database for desktop
     files with MimeType fields. Patch from Emmet Hikory. Closes: #427831
+  * dh_strip: Don't run objcopy if the output file already exists.
+    Closes: #380314
 
- -- Joey Hess <joeyh@debian.org>  Thu, 13 Sep 2007 15:11:06 -0400
+ -- Joey Hess <joeyh@debian.org>  Thu, 13 Sep 2007 15:47:55 -0400
 
 debhelper (5.0.54) unstable; urgency=low
 
