--- a/debian/changelog
+++ b/debian/changelog
@@ -4,8 +4,10 @@ debhelper (5.0.55) UNRELEASED; urgency=low
     files with MimeType fields. Patch from Emmet Hikory. Closes: #427831
   * dh_strip: Don't run objcopy if the output file already exists.
     Closes: #380314
+  * dh_strip: Check that --dbg-package lists the name of a real package.
+    Closes: #442480
 
- -- Joey Hess <joeyh@debian.org>  Thu, 13 Sep 2007 15:47:55 -0400
+ -- Joey Hess <joeyh@debian.org>  Sun, 16 Sep 2007 19:47:59 -0400
 
 debhelper (5.0.54) unstable; urgency=low
 
