--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (5.0.55) UNRELEASED; urgency=low
+debhelper (5.0.55) unstable; urgency=low
 
   * dh_desktop: Only generate calls to update-desktop-database for desktop
     files with MimeType fields. Patch from Emmet Hikory. Closes: #427831
@@ -7,7 +7,7 @@ debhelper (5.0.55) UNRELEASED; urgency=low
   * dh_strip: Check that --dbg-package lists the name of a real package.
     Closes: #442480
 
- -- Joey Hess <joeyh@debian.org>  Sun, 16 Sep 2007 19:47:59 -0400
+ -- Joey Hess <joeyh@debian.org>  Sun, 16 Sep 2007 19:50:08 -0400
 
 debhelper (5.0.54) unstable; urgency=low
 
