r2030: * dh_installmodules: Since modutils is gone, stop supporting   debian/*.modutils files. Warn about such files. Closes: #443127

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (5.0.56) unstable; urgency=low
+
+  * dh_installmodules: Since modutils is gone, stop supporting
+    debian/*.modutils files. Warn about such files. Closes: #443127
+
+ -- Joey Hess <joeyh@debian.org>  Tue, 18 Sep 2007 18:16:13 -0400
+
 debhelper (5.0.55) unstable; urgency=low
 
   * dh_desktop: Only generate calls to update-desktop-database for desktop
