--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+debhelper (5.0.57) UNRELEASED; urgency=low
+
+  * Add --ignore option. This is intended to ease dealing with upstream
+    tarballs that contain debian directories, by allowing debhelper config
+    files in those directories to be ignored, since there's generally no
+    good way to delete them out of the upstream tarball, and they can easily
+    get in the way if upstream is using debian/ differently than the Debian
+    maintainer.
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 30 Sep 2007 13:39:36 -0400
+
 debhelper (5.0.56) unstable; urgency=low
 
   * dh_installmodules: Since modutils is gone, stop supporting
