--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (5.0.57) UNRELEASED; urgency=low
+debhelper (5.0.57) unstable; urgency=low
 
   * Add --ignore option. This is intended to ease dealing with upstream
     tarballs that contain debian directories, by allowing debhelper config
@@ -7,7 +7,7 @@ debhelper (5.0.57) UNRELEASED; urgency=low
     get in the way if upstream is using debian/ differently than the Debian
     maintainer.
 
- -- Joey Hess <joeyh@debian.org>  Sun, 30 Sep 2007 13:39:36 -0400
+ -- Joey Hess <joeyh@debian.org>  Sun, 30 Sep 2007 13:42:09 -0400
 
 debhelper (5.0.56) unstable; urgency=low
 
