r2036: * dh_clean: append "/" to the temp dir name to avoid removing   a file with the same name. Closes: #445638

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (5.0.58) UNRELEASED; urgency=low
+
+  * dh_clean: append "/" to the temp dir name to avoid removing 
+    a file with the same name. Closes: #445638
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 07 Oct 2007 09:27:26 -0400
+
 debhelper (5.0.57) unstable; urgency=low
 
   * Add --ignore option. This is intended to ease dealing with upstream
