--- a/doc/TODO
+++ b/doc/TODO
@@ -33,6 +33,7 @@ Wishlist items:
 v6:
 
 * escaping in config files (for whitespace)?
+* make dh_install use hard links for efficiency
 
 Deprecated:
 
