--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-debhelper (5.0.58) UNRELEASED; urgency=low
+debhelper (5.0.58) unstable; urgency=low
 
-  * dh_clean: append "/" to the temp dir name to avoid removing 
+  * dh_clean: append "/" to the temp dir name to avoid removing
     a file with the same name. Closes: #445638
 
- -- Joey Hess <joeyh@debian.org>  Sun, 07 Oct 2007 09:27:26 -0400
+ -- Joey Hess <joeyh@debian.org>  Fri, 19 Oct 2007 21:25:50 -0400
 
 debhelper (5.0.57) unstable; urgency=low
 
