--- a/man/po4a/po/debhelper.pot
+++ b/man/po4a/po/debhelper.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2007-09-30 13:43-0400\n"
+"POT-Creation-Date: 2007-10-19 21:26-0400\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -2338,7 +2338,7 @@ msgid ""
 "If dh_installman seems to install a man page into the wrong section or with "
 "the wrong extension, this is because the man page has the wrong section "
 "listed in its .TH line. Edit the man page and correct the section, and "
-"dh_installman will follow suit.  See to L<man(7)> for details about the .TH "
+"dh_installman will follow suit.  See L<man(7)> for details about the .TH "
 "section. If dh_installman seems to install a man page into a directory like "
 "/usr/share/man/pl/man1/, that is because your program has a name like "
 "\"foo.pl\", and dh_installman assumes that means it is translated into "
