--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (5.0.59) unstable; urgency=low
+
+  * dh_installdeb: Add support for dpkg triggers, by installing
+    debian/package.triggers files.
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 22 Oct 2007 13:58:36 -0400
+
 debhelper (5.0.58) unstable; urgency=low
 
   * dh_clean: append "/" to the temp dir name to avoid removing
