* Debhelper is now developed in a git repository.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (5.0.60) UNRELEASED; urgency=low
+
+  * Debhelper is now developed in a git repository.
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 22 Oct 2007 15:15:33 -0400
+
 debhelper (5.0.59) unstable; urgency=low
 
   * dh_installdeb: Add support for dpkg triggers, by installing
