add .git to example DH_ALWAYS_EXCLUDE line

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -385,7 +385,7 @@ directory.
 
 dh_builddeb did not previously delete everything matching
 DH_ALWAYS_EXCLUDE, if it was set to a list of things to exclude, such as
-"CVS:.svn". Now it does.
+"CVS:.svn:.git". Now it does.
 
 =item -
 
