--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,10 @@
 debhelper (5.0.60) UNRELEASED; urgency=low
 
   * Debhelper is now developed in a git repository.
+  * Reword paragraph about debian/compress files to perhaps be more clear
+    about the debian/compress file. Closes: #448759
 
- -- Joey Hess <joeyh@debian.org>  Mon, 22 Oct 2007 15:15:33 -0400
+ -- Joey Hess <joeyh@debian.org>  Wed, 31 Oct 2007 12:58:35 -0400
 
 debhelper (5.0.59) unstable; urgency=low
 
