--- a/debian/changelog
+++ b/debian/changelog
@@ -3,8 +3,9 @@ debhelper (5.0.60) UNRELEASED; urgency=low
   * Debhelper is now developed in a git repository.
   * Reword paragraph about debian/compress files to perhaps be more clear
     about the debian/compress file. Closes: #448759
+  * dh_installdirs(1): Remove unnecessary caveat about slashes.
 
- -- Joey Hess <joeyh@debian.org>  Wed, 31 Oct 2007 12:58:35 -0400
+ -- Joey Hess <joeyh@debian.org>  Fri, 02 Nov 2007 21:33:41 -0400
 
 debhelper (5.0.59) unstable; urgency=low
 
