--- a/debian/changelog
+++ b/debian/changelog
@@ -4,8 +4,10 @@ debhelper (5.0.60) UNRELEASED; urgency=low
   * Reword paragraph about debian/compress files to perhaps be more clear
     about the debian/compress file. Closes: #448759
   * dh_installdirs(1): Remove unnecessary caveat about slashes.
+  * dh_icons: Now that GTK 2.12 has entered testing, use the much simpler to
+    call update-icon-caches command. Thanks, Josselin Mouette.
 
- -- Joey Hess <joeyh@debian.org>  Fri, 02 Nov 2007 21:33:41 -0400
+ -- Joey Hess <joeyh@debian.org>  Fri, 02 Nov 2007 23:17:39 -0400
 
 debhelper (5.0.59) unstable; urgency=low
 
