--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (5.0.60) UNRELEASED; urgency=low
+debhelper (5.0.60) unstable; urgency=low
 
   * Debhelper is now developed in a git repository.
   * Reword paragraph about debian/compress files to perhaps be more clear
@@ -7,7 +7,7 @@ debhelper (5.0.60) UNRELEASED; urgency=low
   * dh_icons: Now that GTK 2.12 has entered testing, use the much simpler to
     call update-icon-caches command. Thanks, Josselin Mouette.
 
- -- Joey Hess <joeyh@debian.org>  Fri, 02 Nov 2007 23:17:39 -0400
+ -- Joey Hess <joeyh@debian.org>  Fri, 02 Nov 2007 23:21:08 -0400
 
 debhelper (5.0.59) unstable; urgency=low
 
