* Man page fix re v4. Closes: #450608

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (5.0.61) UNRELEASED; urgency=low
+
+  * Man page fix re v4. Closes: #450608
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 08 Nov 2007 12:06:44 -0500
+
 debhelper (5.0.60) unstable; urgency=low
 
   * Debhelper is now developed in a git repository.
