* dh_makeshlibs: Support symbols files. Closes: #443978   Packages using this support should build-depend on dpkg-dev (>= 1.14.8).   Symbols files can be downloaded from mole:   http://qa.debian.org/cgi-bin/mole/seedsymbols

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,10 @@
 debhelper (5.0.61) UNRELEASED; urgency=low
 
   * Man page fix re v4. Closes: #450608
+  * dh_makeshlibs: Support symbols files. Closes: #443978
+    Packages using this support should build-depend on dpkg-dev (>= 1.14.8).
+    Symbols files can be downloaded from mole:
+    http://qa.debian.org/cgi-bin/mole/seedsymbols
 
  -- Joey Hess <joeyh@debian.org>  Thu, 08 Nov 2007 12:06:44 -0500
 
