--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (5.0.61) UNRELEASED; urgency=low
+debhelper (5.0.61) unstable; urgency=low
 
   * Man page fix re v4. Closes: #450608
   * dh_makeshlibs: Support symbols files. Closes: #443978
@@ -6,7 +6,7 @@ debhelper (5.0.61) UNRELEASED; urgency=low
     Symbols files can be downloaded from mole:
     http://qa.debian.org/cgi-bin/mole/seedsymbols
 
- -- Joey Hess <joeyh@debian.org>  Thu, 08 Nov 2007 12:06:44 -0500
+ -- Joey Hess <joeyh@debian.org>  Mon, 19 Nov 2007 14:27:57 -0500
 
 debhelper (5.0.60) unstable; urgency=low
 
