* Remove execute bit from desktop files in /usr/share/applications.   Closes: #452337

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (5.0.62) UNRELEASED; urgency=low
+
+  * Remove execute bit from desktop files in /usr/share/applications.
+    Closes: #452337
+
+ -- Joey Hess <joeyh@debian.org>  Wed, 21 Nov 2007 19:34:39 -0500
+
 debhelper (5.0.61) unstable; urgency=low
 
   * Man page fix re v4. Closes: #450608
