* Fix man page names of translated debhelper(7) man pages.   Patch from Frédéric Bothamy. Closes: 453051

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ debhelper (5.0.62) UNRELEASED; urgency=low
 
   * Remove execute bit from desktop files in /usr/share/applications.
     Closes: #452337
+  * Fix man page names of translated debhelper(7) man pages.
+    Patch from Frédéric Bothamy. Closes: 453051
 
  -- Joey Hess <joeyh@debian.org>  Wed, 21 Nov 2007 19:34:39 -0500
 
