* dh_makeshlibs: Use new -I flag to specify symbol files, necessary to   properly support includes. Closes: #452717 * Increase dpkg-dev dependency to 1.14.12 to ensure that dh_makeshlibs   isn't used with an old dpkg-gensymbols that doesn't support -I.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,15 @@
-debhelper (5.0.62) UNRELEASED; urgency=low
+debhelper (5.0.62) unstable; urgency=low
 
   * Remove execute bit from desktop files in /usr/share/applications.
     Closes: #452337
   * Fix man page names of translated debhelper(7) man pages.
     Patch from Frédéric Bothamy. Closes: 453051
+  * dh_makeshlibs: Use new -I flag to specify symbol files, necessary to
+    properly support includes. Closes: #452717
+  * Increase dpkg-dev dependency to 1.14.12 to ensure that dh_makeshlibs
+    isn't used with an old dpkg-gensymbols that doesn't support -I.
 
- -- Joey Hess <joeyh@debian.org>  Wed, 21 Nov 2007 19:34:39 -0500
+ -- Joey Hess <joeyh@debian.org>  Thu, 29 Nov 2007 12:04:59 -0500
 
 debhelper (5.0.61) unstable; urgency=low
 
