--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-debhelper (5.0.63) UNRELEASED; urgency=low
+debhelper (5.0.63) unstable; urgency=low
 
   * dh_installdocs: Tighten doc-base document id parsing to only accept
     the characters that the doc-base manual allows in the id. Closes: #445541
 
- -- Joey Hess <joeyh@debian.org>  Sat, 22 Dec 2007 21:02:11 -0500
+ -- Joey Hess <joeyh@debian.org>  Sat, 22 Dec 2007 22:54:51 -0500
 
 debhelper (5.0.62) unstable; urgency=low
 
