--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (5.0.64) UNRELEASED; urgency=low
+
+  * dh_gencontrol: Stop passing -isp, it's the default now. Closes: #458114
+
+ -- Joey Hess <joeyh@debian.org>  Fri, 28 Dec 2007 15:45:39 -0500
+
 debhelper (5.0.63) unstable; urgency=low
 
   * dh_installdocs: Tighten doc-base document id parsing to only accept
