--- a/debhelper.pod
+++ b/debhelper.pod
@@ -339,8 +339,7 @@ dh_link will correct existing links to conform with policy.
 
 =item V5
 
-This is the recommended mode of operation. It does everything V4 does,
-plus:
+Changes from V4 are:
 
 =over 8
 
@@ -365,8 +364,8 @@ dh_install errors out if wildcards expand to nothing.
 
 =item V6
 
-This mode is still under development. Currently it has these differences
-compared to V5:
+This is the recommended mode of operation. It does everything V5 does,
+plus:
 
 =over 8
 
