--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (5.0.64) UNRELEASED; urgency=low
+debhelper (6.0.0) UNRELEASED; urgency=low
 
   * dh_gencontrol: Stop passing -isp, it's the default now. Closes: #458114
   * dh_shlibdeps: Update documentation for -L and -l. dpkg-shlibdeps is now
@@ -11,6 +11,10 @@ debhelper (5.0.64) UNRELEASED; urgency=low
     dpkg-shlibdeps. The old behavior of passing -L to dpkg-shlibdeps didn't
     affect where it looked for symbols files. Closes: #459224
   * Depend on dpkg-dev 1.14.15, the first to support dpkg-shlibdeps -S.
+  * dh_installdocs, dh_installexamples: Support files with spaces in exclude
+    mode. Closes: #459426
+  * debhelper v6 mode is finalised and the new recommended compatability
+    level.
 
  -- Joey Hess <joeyh@debian.org>  Fri, 28 Dec 2007 15:45:39 -0500
 
