--- a/debian/changelog
+++ b/debian/changelog
@@ -13,7 +13,7 @@ debhelper (6.0.0) UNRELEASED; urgency=low
   * Depend on dpkg-dev 1.14.15, the first to support dpkg-shlibdeps -S.
   * dh_installdocs, dh_installexamples: Support files with spaces in exclude
     mode. Closes: #459426
-  * debhelper v6 mode is finalised and the new recommended compatability
+  * debhelper v6 mode is finalised and is the new recommended compatability
     level.
 
  -- Joey Hess <joeyh@debian.org>  Fri, 28 Dec 2007 15:45:39 -0500
