--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (6.0.0) UNRELEASED; urgency=low
+debhelper (6.0.0) unstable; urgency=low
 
   * dh_gencontrol: Stop passing -isp, it's the default now. Closes: #458114
   * dh_shlibdeps: Update documentation for -L and -l. dpkg-shlibdeps is now
@@ -13,10 +13,10 @@ debhelper (6.0.0) UNRELEASED; urgency=low
   * Depend on dpkg-dev 1.14.15, the first to support dpkg-shlibdeps -S.
   * dh_installdocs, dh_installexamples: Support files with spaces in exclude
     mode. Closes: #459426
-  * debhelper v6 mode is finalised and is the new recommended compatability
+  * debhelper v6 mode is finalised and is the new recommended compatibility
     level.
 
- -- Joey Hess <joeyh@debian.org>  Fri, 28 Dec 2007 15:45:39 -0500
+ -- Joey Hess <joeyh@debian.org>  Tue, 08 Jan 2008 17:12:36 -0500
 
 debhelper (5.0.63) unstable; urgency=low
 
