--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (6.0.2) unstable; urgency=low
+
+  * Revert slightly broken refactoring of some exclude code.
+    Closes: #460340, #460351
+
+ -- Joey Hess <joeyh@debian.org>  Sat, 12 Jan 2008 12:31:15 -0500
+
 debhelper (6.0.1) unstable; urgency=low
 
   * dh_installdocs/examples: Don't unnecessarily use the exclude code path.
