* dh_link: -X can be used to avoid it modifying symlinks to be compliant   with policy. Closes: #461392

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (6.0.3) UNRELEASED; urgency=low
+
+  * dh_link: -X can be used to avoid it modifying symlinks to be compliant
+    with policy. Closes: #461392
+
+ -- Joey Hess <joeyh@debian.org>  Fri, 18 Jan 2008 12:29:15 -0500
+
 debhelper (6.0.2) unstable; urgency=low
 
   * Revert slightly broken refactoring of some exclude code.
