--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (6.0.3) UNRELEASED; urgency=low
+debhelper (6.0.3) unstable; urgency=low
 
   * dh_link: -X can be used to avoid it modifying symlinks to be compliant
     with policy. Closes: #461392
@@ -8,7 +8,7 @@ debhelper (6.0.3) UNRELEASED; urgency=low
     symbols. (Hardcoding the names of those directories is not the best
     implementation, but it will do for now.) Closes: #461339
 
- -- Joey Hess <joeyh@debian.org>  Fri, 18 Jan 2008 12:29:15 -0500
+ -- Joey Hess <joeyh@debian.org>  Sun, 20 Jan 2008 15:27:59 -0500
 
 debhelper (6.0.2) unstable; urgency=low
 
