* dh_strip: Improve the idempotency fix put in for #380314. * dh_strip: The -k flag didn't work (--keep did). Fix.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (6.0.4) UNRELEASED; urgency=low
+
+  * dh_strip: Improve the idempotency fix put in for #380314.
+  * dh_strip: The -k flag didn't work (--keep did). Fix.
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 24 Jan 2008 21:39:37 -0500
+
 debhelper (6.0.3) unstable; urgency=low
 
   * dh_link: -X can be used to avoid it modifying symlinks to be compliant
