--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ debhelper (6.0.4) UNRELEASED; urgency=low
 
   * dh_strip: Improve the idempotency fix put in for #380314.
   * dh_strip: The -k flag didn't work (--keep did). Fix.
+  * dh_shlibdeps: Add emul to exclude list.
 
  -- Joey Hess <joeyh@debian.org>  Thu, 24 Jan 2008 21:39:37 -0500
 
