--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-debhelper (6.0.4) UNRELEASED; urgency=low
+debhelper (6.0.4) unstable; urgency=low
 
   * dh_strip: Improve the idempotency fix put in for #380314.
   * dh_strip: The -k flag didn't work (--keep did). Fix.
   * dh_shlibdeps: Add emul to exclude list.
 
- -- Joey Hess <joeyh@debian.org>  Thu, 24 Jan 2008 21:39:37 -0500
+ -- Joey Hess <joeyh@debian.org>  Sat, 26 Jan 2008 18:32:27 -0500
 
 debhelper (6.0.3) unstable; urgency=low
 
