--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (6.0.5) unstable; urgency=low
+
+  * dh_installman: Recode all man pages to utf-8 on installation.
+    Closes: #462937 (Colin Watson)
+  * Depend on a new enough version of man-db.
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 28 Jan 2008 16:43:10 -0500
+
 debhelper (6.0.4) unstable; urgency=low
 
   * dh_strip: Improve the idempotency fix put in for #380314.
