* dh_compress: Pass -n to gzip to yeild more reproducible file contents.   The time stamp information need not be contained in the .gz file since the   time stamp is preserved when compressing and decompressing. Closes: #467100

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (6.0.6) UNRELEASED; urgency=low
+
+  * dh_compress: Pass -n to gzip to yeild more reproducible file contents.
+    The time stamp information need not be contained in the .gz file since the
+    time stamp is preserved when compressing and decompressing. Closes: #467100
+
+ -- Joey Hess <joeyh@debian.org>  Wed, 27 Feb 2008 16:30:16 -0500
+
 debhelper (6.0.5) unstable; urgency=low
 
   * dh_installman: Recode all man pages to utf-8 on installation.
