* dh_lintian: Finally added this since linda is gone and there's only   lintian to worry about supporting. Closes: #109642, #166320, #206765   (Thanks to Steve M. Robbins for the initial implementation.)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (6.0.7) UNRELEASED; urgency=low
+
+  * dh_lintian: Finally added this since linda is gone and there's only
+    lintian to worry about supporting. Closes: #109642, #166320, #206765
+    (Thanks to Steve M. Robbins for the initial implementation.)
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 06 Mar 2008 01:43:13 -0500
+
 debhelper (6.0.6) unstable; urgency=low
 
   * dh_compress: Pass -n to gzip to yeild more reproducible file contents.
