--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-debhelper (6.0.8) UNRELEASED; urgency=low
+debhelper (6.0.8) unstable; urgency=low
 
   * dh_installman: Convert all man pages in the build directory to utf-8, not
     just those installed by the program.
 
- -- Joey Hess <joeyh@debian.org>  Mon, 10 Mar 2008 16:09:24 -0400
+ -- Joey Hess <joeyh@debian.org>  Mon, 10 Mar 2008 18:40:25 -0400
 
 debhelper (6.0.7) unstable; urgency=low
 
