--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (6.0.9) unstable; urgency=low
+
+  * dh_installman: Don't recode symlinks. Closes: #471196
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 16 Mar 2008 13:53:39 -0400
+
 debhelper (6.0.8) unstable; urgency=low
 
   * dh_installman: Convert all man pages in the build directory to utf-8, not
