dh_perl: Remove empty directories created by MakeMaker.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (6.0.10) UNRELEASED; urgency=low
+
+  * dh_perl: Remove empty directories created by MakeMaker.
+
+ -- Joey Hess <joeyh@debian.org>  Tue, 25 Mar 2008 14:06:51 -0400
+
 debhelper (6.0.9) unstable; urgency=low
 
   * dh_installman: Don't recode symlinks. Closes: #471196
