--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-debhelper (6.0.10) UNRELEASED; urgency=low
+debhelper (6.0.10) unstable; urgency=low
 
   * dh_perl: Remove empty directories created by MakeMaker.
 
- -- Joey Hess <joeyh@debian.org>  Tue, 25 Mar 2008 14:06:51 -0400
+ -- Joey Hess <joeyh@debian.org>  Tue, 25 Mar 2008 14:11:57 -0400
 
 debhelper (6.0.9) unstable; urgency=low
 
