dh_installman: man --recode transparently uncompresses compressed pages. So when saving the output back, save it to a non-compressed filename (and delete the original, compressed file). Closes: #470913

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (6.0.11) unstable; urgency=medium
+
+  * dh_installman: man --recode transparently uncompresses compressed
+    pages. So when saving the output back, save it to a non-compressed
+    filename (and delete the original, compressed file). Closes: #470913
+
+ -- Joey Hess <joeyh@debian.org>  Tue, 01 Apr 2008 18:31:12 -0400
+
 debhelper (6.0.10) unstable; urgency=low
 
   * dh_perl: Remove empty directories created by MakeMaker.
