--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (6.0.12) UNRELEASED; urgency=low
+
+  * dh_icons: Support .xpm format icons. Stop looking for .jpg icons, and
+    also, for compleness, support .icon files. This matches the set of
+    extensions supported by gtk-update-icon-cache. Closes: #448094
+
+ -- Joey Hess <joeyh@debian.org>  Sat, 19 Apr 2008 16:38:43 -0400
+
 debhelper (6.0.11) unstable; urgency=medium
 
   * dh_installman: man --recode transparently uncompresses compressed
