--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,7 @@
 debhelper (6.0.12) unstable; urgency=low
 
   * dh_icons: Support .xpm format icons. Stop looking for .jpg icons, and
-    also, for compleness, support .icon files. This matches the set of
+    also, for completeness, support .icon files. This matches the set of
     extensions supported by gtk-update-icon-cache. Closes: #448094
 
  -- Joey Hess <joeyh@debian.org>  Sat, 19 Apr 2008 16:43:31 -0400
