dh_clean: Don't delete core dumps. (Too DWIM, and "core" is not necessarily a core dump.) Closes: #477391

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (6.0.13) UNRELEASED; urgency=low
+
+  * dh_clean: Don't delete core dumps. (Too DWIM, and "core" is not
+    necessarily a core dump.) Closes: #477391
+
+ -- Joey Hess <joeyh@debian.org>  Tue, 22 Apr 2008 17:54:20 -0400
+
 debhelper (6.0.12) unstable; urgency=low
 
   * dh_icons: Support .xpm format icons. Stop looking for .jpg icons, and
