dh_auto_configure: New program, automates running ./configure, Makefile.PL, and python distutils. Calls them with exactly the same options as cdbs does by default, and allows adding/overriding options.

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,9 @@ debhelper (6.0.13) UNRELEASED; urgency=low
     necessarily a core dump.) Closes: #477391
   * Record debhelper commands that successfully finish in a per-package log
     file.
+  * dh_auto_configure: New program, automates running ./configure,
+    Makefile.PL, and python distutils. Calls them with exactly the same
+    options as cdbs does by default, and allows adding/overriding options.
 
  -- Joey Hess <joeyh@debian.org>  Tue, 22 Apr 2008 17:54:20 -0400
 
