dh_auto_build: New program, automates building the package by either running make or using setup.py. (Support for cmake and other build systems planned but not yet implemented.)

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,9 @@ debhelper (6.0.13) UNRELEASED; urgency=low
   * dh_auto_configure: New program, automates running ./configure,
     Makefile.PL, and python distutils. Calls them with exactly the same
     options as cdbs does by default, and allows adding/overriding options.
+  * dh_auto_build: New program, automates building the package by either
+    running make or using setup.py. (Support for cmake and other build systems
+    planned but not yet implemented.)
 
  -- Joey Hess <joeyh@debian.org>  Tue, 22 Apr 2008 17:54:20 -0400
 
