dh_auto_test: New program, automates running make test or make check if the Makefile has such a target.

--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,8 @@ debhelper (6.0.13) UNRELEASED; urgency=low
   * dh_auto_build: New program, automates building the package by either
     running make or using setup.py. (Support for cmake and other build systems
     planned but not yet implemented.)
+  * dh_auto_test: New program, automates running make test or make check
+    if the Makefile has such a target.
 
  -- Joey Hess <joeyh@debian.org>  Tue, 22 Apr 2008 17:54:20 -0400
 
