dh_auto_clean: New program, automates running make clean (or distclean, or realclean), or using setup.py to clean up.

--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,8 @@ debhelper (6.0.13) UNRELEASED; urgency=low
     planned but not yet implemented.)
   * dh_auto_test: New program, automates running make test or make check
     if the Makefile has such a target.
+  * dh_auto_clean: New program, automates running make clean (or distclean,
+    or realclean), or using setup.py to clean up.
 
  -- Joey Hess <joeyh@debian.org>  Tue, 22 Apr 2008 17:54:20 -0400
 
