dh_auto_install: New program, automates running make install, or using setup.py to install. Supports the PREFIX=/usr special case needed by MakeMaker Makefiles. (Support for cmake and other build systems planned but not yet implemented.)

--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,10 @@ debhelper (6.0.13) UNRELEASED; urgency=low
     if the Makefile has such a target.
   * dh_auto_clean: New program, automates running make clean (or distclean,
     or realclean), or using setup.py to clean up.
+  * dh_auto_install: New program, automates running make install, or using
+    setup.py to install. Supports the PREFIX=/usr special case needed by
+    MakeMaker Makefiles. (Support for cmake and other build systems planned
+    but not yet implemented.)
 
  -- Joey Hess <joeyh@debian.org>  Tue, 22 Apr 2008 17:54:20 -0400
 
